--- a/files/SteelEC ML.ipynb
+++ b/files/SteelEC ML.ipynb
@@ -4,20 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Group 3 ML assignment \n",
-    "\n",
-    "Steel Industry Energy Consumption Prediction\n",
-    "\n",
-    "Linear regression Model\n",
-    "\n",
-    "Jonathan Katerega and Emmanuel Odeke"
+    "# **Advanced ML assignment**\n",
+    "## Steel Industry Energy Consumption Prediction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing Libraries"
+    "### Group 3\n",
+    "Jonathan Kateega and Emmanuel Odeke"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Description of the Data from the Stakeholders\n",
+    "The data is from the DAEWOO Steel Co. Ltd in Gwangyang, South Korea. It produces several types of coils, steel plates, and iron plates. The information describes electricity consumption on a daily basis over the course of the year 2018, measured at several times over the course of each day."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing Libraries"
    ]
   },
   {
@@ -40,176 +51,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Loading Dataset"
+    "### Loading the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>Usage_kWh</th>\n",
-       "      <th>Lagging_Current_Reactive.Power_kVarh</th>\n",
-       "      <th>Leading_Current_Reactive_Power_kVarh</th>\n",
-       "      <th>CO2(tCO2)</th>\n",
-       "      <th>Lagging_Current_Power_Factor</th>\n",
-       "      <th>Leading_Current_Power_Factor</th>\n",
-       "      <th>NSM</th>\n",
-       "      <th>WeekStatus</th>\n",
-       "      <th>Day_of_week</th>\n",
-       "      <th>Load_Type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>01/01/2018 00:15</td>\n",
-       "      <td>3.17</td>\n",
-       "      <td>2.95</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>73.21</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>900</td>\n",
-       "      <td>Weekday</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>Light_Load</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01/01/2018 00:30</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>4.46</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>66.77</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>Weekday</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>Light_Load</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01/01/2018 00:45</td>\n",
-       "      <td>3.24</td>\n",
-       "      <td>3.28</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>70.28</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2700</td>\n",
-       "      <td>Weekday</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>Light_Load</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01/01/2018 01:00</td>\n",
-       "      <td>3.31</td>\n",
-       "      <td>3.56</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>68.09</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>3600</td>\n",
-       "      <td>Weekday</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>Light_Load</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01/01/2018 01:15</td>\n",
-       "      <td>3.82</td>\n",
-       "      <td>4.50</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>64.72</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>4500</td>\n",
-       "      <td>Weekday</td>\n",
-       "      <td>Monday</td>\n",
-       "      <td>Light_Load</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               date  Usage_kWh  Lagging_Current_Reactive.Power_kVarh  \\\n",
-       "0  01/01/2018 00:15       3.17                                  2.95   \n",
-       "1  01/01/2018 00:30       4.00                                  4.46   \n",
-       "2  01/01/2018 00:45       3.24                                  3.28   \n",
-       "3  01/01/2018 01:00       3.31                                  3.56   \n",
-       "4  01/01/2018 01:15       3.82                                  4.50   \n",
-       "\n",
-       "   Leading_Current_Reactive_Power_kVarh  CO2(tCO2)  \\\n",
-       "0                                   0.0        0.0   \n",
-       "1                                   0.0        0.0   \n",
-       "2                                   0.0        0.0   \n",
-       "3                                   0.0        0.0   \n",
-       "4                                   0.0        0.0   \n",
-       "\n",
-       "   Lagging_Current_Power_Factor  Leading_Current_Power_Factor   NSM  \\\n",
-       "0                         73.21                         100.0   900   \n",
-       "1                         66.77                         100.0  1800   \n",
-       "2                         70.28                         100.0  2700   \n",
-       "3                         68.09                         100.0  3600   \n",
-       "4                         64.72                         100.0  4500   \n",
-       "\n",
-       "  WeekStatus Day_of_week   Load_Type  \n",
-       "0    Weekday      Monday  Light_Load  \n",
-       "1    Weekday      Monday  Light_Load  \n",
-       "2    Weekday      Monday  Light_Load  \n",
-       "3    Weekday      Monday  Light_Load  \n",
-       "4    Weekday      Monday  Light_Load  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Load data\n",
-    "#file_path='https://docs.google.com/spreadsheets/d/e/2PACX-1vQK75AStRi8HwX4sd7gcMC6DOxDwZWzUoLFxIUK6JAuaRzdU1BvryH1Bw7I8ft8j_Avi-aWBfuzGU5s/pub?output=csv'\n",
-    "\n",
-    "df = pd.read_csv('../files/Steel_industry_data.csv')\n",
-    "df.head()"
+    "df = pd.read_csv('../files/Steel_industry_data.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EDA"
+    "### Exploring the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +214,7 @@
        "4    Weekday      Monday  Light_Load  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +367,7 @@
        "35039    Weekday      Monday  Light_Load  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +572,7 @@
        "max    85500.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +596,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +659,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,14 +673,254 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are no missing values in the data set"
+    "There are no missing values nor duplicated rows in the data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizations"
+    "### Some Manipulations of the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 35040 entries, 0 to 35039\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                                Non-Null Count  Dtype  \n",
+      "---  ------                                --------------  -----  \n",
+      " 0   date                                  35040 non-null  object \n",
+      " 1   Usage_kWh                             35040 non-null  float64\n",
+      " 2   Lagging_Current_Reactive.Power_kVarh  35040 non-null  float64\n",
+      " 3   Leading_Current_Reactive_Power_kVarh  35040 non-null  float64\n",
+      " 4   CO2(tCO2)                             35040 non-null  float64\n",
+      " 5   Lagging_Current_Power_Factor          35040 non-null  float64\n",
+      " 6   Leading_Current_Power_Factor          35040 non-null  float64\n",
+      " 7   NSM                                   35040 non-null  int64  \n",
+      " 8   WeekStatus                            35040 non-null  object \n",
+      " 9   Day_of_week                           35040 non-null  object \n",
+      " 10  Load_Type                             35040 non-null  object \n",
+      "dtypes: float64(6), int64(1), object(4)\n",
+      "memory usage: 2.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop the index column, as it's not necessary \n",
+    "df.reset_index(drop=True, inplace=True) \n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 35040 entries, 0 to 35039\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   date                    35040 non-null  object \n",
+      " 1   Usage_kWh               35040 non-null  float64\n",
+      " 2   Lagging_Reactive_Power  35040 non-null  float64\n",
+      " 3   Leading_Reactive_Power  35040 non-null  float64\n",
+      " 4   CO2                     35040 non-null  float64\n",
+      " 5   Lagging_Power_Factor    35040 non-null  float64\n",
+      " 6   Leading_Power_Factor    35040 non-null  float64\n",
+      " 7   NSM                     35040 non-null  int64  \n",
+      " 8   WeekStatus              35040 non-null  object \n",
+      " 9   Day_of_week             35040 non-null  object \n",
+      " 10  Load_Type               35040 non-null  object \n",
+      "dtypes: float64(6), int64(1), object(4)\n",
+      "memory usage: 2.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simplify some column names\n",
+    "df = df.rename(columns={'Lagging_Current_Reactive.Power_kVarh': 'Lagging_Reactive_Power',\n",
+    "                        'Leading_Current_Reactive_Power_kVarh': 'Leading_Reactive_Power',\n",
+    "                        'Lagging_Current_Power_Factor': 'Lagging_Power_Factor',\n",
+    "                        'Leading_Current_Power_Factor': 'Leading_Power_Factor',\n",
+    "                        'CO2(tCO2)':'CO2'})\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the 'date' column to datetime\n",
+    "df['date'] = pd.to_datetime(df['date'], format='%d/%m/%Y %H:%M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>Usage_kWh</th>\n",
+       "      <th>Lagging_Reactive_Power</th>\n",
+       "      <th>Leading_Reactive_Power</th>\n",
+       "      <th>CO2</th>\n",
+       "      <th>Lagging_Power_Factor</th>\n",
+       "      <th>Leading_Power_Factor</th>\n",
+       "      <th>NSM</th>\n",
+       "      <th>WeekStatus</th>\n",
+       "      <th>Day_of_week</th>\n",
+       "      <th>Load_Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-01 00:15:00</td>\n",
+       "      <td>3.17</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>73.21</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>900</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Light_Load</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-01 00:30:00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.46</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>66.77</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Light_Load</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-01 00:45:00</td>\n",
+       "      <td>3.24</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70.28</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Light_Load</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-01 01:00:00</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>3.56</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>68.09</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Light_Load</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-01 01:15:00</td>\n",
+       "      <td>3.82</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64.72</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>4500</td>\n",
+       "      <td>Weekday</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>Light_Load</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 date  Usage_kWh  Lagging_Reactive_Power  \\\n",
+       "0 2018-01-01 00:15:00       3.17                    2.95   \n",
+       "1 2018-01-01 00:30:00       4.00                    4.46   \n",
+       "2 2018-01-01 00:45:00       3.24                    3.28   \n",
+       "3 2018-01-01 01:00:00       3.31                    3.56   \n",
+       "4 2018-01-01 01:15:00       3.82                    4.50   \n",
+       "\n",
+       "   Leading_Reactive_Power  CO2  Lagging_Power_Factor  Leading_Power_Factor  \\\n",
+       "0                     0.0  0.0                 73.21                 100.0   \n",
+       "1                     0.0  0.0                 66.77                 100.0   \n",
+       "2                     0.0  0.0                 70.28                 100.0   \n",
+       "3                     0.0  0.0                 68.09                 100.0   \n",
+       "4                     0.0  0.0                 64.72                 100.0   \n",
+       "\n",
+       "    NSM WeekStatus Day_of_week   Load_Type  \n",
+       "0   900    Weekday      Monday  Light_Load  \n",
+       "1  1800    Weekday      Monday  Light_Load  \n",
+       "2  2700    Weekday      Monday  Light_Load  \n",
+       "3  3600    Weekday      Monday  Light_Load  \n",
+       "4  4500    Weekday      Monday  Light_Load  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Preview dataframe with simplified feature names\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Visualizations"
    ]
   }
  ],
